Add all logs on directory

--- a/logstash-forwarder.conf
+++ b/logstash-forwarder.conf
@@ -11,7 +11,7 @@
   "files": [
     {
       "paths": [
-        "/opt/logs/cloud.log"
+        "/opt/logs/*.log"
       ],
       "fields": {
         "app": "cloud",
